added responsive design for mobiles

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       />
     </div>
     <div class="carousel">
-      <div>
-        <h1 class="genre">Popular on Netflix</h1>
+      <div class="genre">
+        <h1>Popular on Netflix</h1>
       </div>
       <div class="carousel-box"></div>
       <a class="switchLeft sliderButton"><</a>
